--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ form button:hover {
             <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product-item">
-                    <img src="elect3.jpg" alt="Product 1">
+                    <img src="image/elect3.jpg" alt="Product 1">
                     <h3>Electronics</h3>
                     <p>Affordable Electronic Gadget</p>
                     <button>Shop</button>
